@@ -1,66 +1,61 @@
 package com.pos.monitoring.controller;
 
+import com.pos.monitoring.dtos.pageable.TerminalModelPageableSearch;
+import com.pos.monitoring.dtos.request.TerminalModelCreateDto;
+import com.pos.monitoring.dtos.request.TerminalModelUpdateDto;
+import com.pos.monitoring.dtos.response.ListResponse;
 import com.pos.monitoring.entities.TerminalModel;
 import com.pos.monitoring.exceptions.ValidatorException;
 import com.pos.monitoring.services.TerminalModelService;
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
+import org.springframework.data.domain.Page;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.lang.reflect.Field;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/terminal/model")
+@RequestMapping("/api/terminal-models")
 @RequiredArgsConstructor
+@CrossOrigin
 public class TerminalModelController {
 
     private final TerminalModelService terminalModelService;
 
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
     @GetMapping("/{id}")
     public TerminalModel getById(@PathVariable String id) {
         return terminalModelService.getById(Long.parseLong(id));
     }
 
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
     @GetMapping("/prefix/{prefix}")
     public TerminalModel getByPrefix(@PathVariable String prefix) {
         return terminalModelService.get(prefix);
     }
 
-    @PostMapping("/create")
     @Transactional
-    public TerminalModel create(@RequestBody TerminalModel terminalModel) {
-        return terminalModelService.create(terminalModel);
+    @PostMapping(value = "/create", produces = "application/json")
+    public void create(@RequestBody TerminalModelCreateDto createDto) {
+        terminalModelService.create(createDto);
     }
 
-    @PostMapping("/update")
     @Transactional
-    public TerminalModel update(@RequestBody TerminalModel updateTerminal) {
-        if (updateTerminal.getId() == null) {
-            throw new ValidatorException("idsi null kelgan");
-        }
-        return terminalModelService.update(updateTerminal);
+    @PutMapping("/update")
+    public void update(@RequestBody TerminalModelUpdateDto updateDto) {
+        terminalModelService.update(updateDto);
     }
 
-    @GetMapping("/all/{page}/{limit}")
-    public List<Map<String,String>> getAll(@PathVariable Integer limit, @PathVariable Integer page) {
-        if(limit==null){
-            limit=10;
-        }if(page==null){
-            page=0;
-        }
-        List<TerminalModel> all = terminalModelService.getAll(limit, page);
-        return all.stream().map(a -> {
-            try {
-                return getMap(a);
-            } catch (IllegalAccessException e) {
-                throw new ValidatorException("parse qilishda xatolik");
-            }
-        }).collect(Collectors.toList());
-
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
+    @PostMapping(value = "/get-all", produces = "application/json")
+    public ListResponse getAll(@RequestBody TerminalModelPageableSearch pageableSearch) {
+        Page<TerminalModel> pageable = terminalModelService.getAll(pageableSearch);
+        return new ListResponse(pageable.getTotalElements(),
+                pageable.stream().map(this::getMap).toList());
     }
 
     @PostMapping("/delete")
@@ -69,7 +64,7 @@ public class TerminalModelController {
         terminalModelService.deleteById(terminalModel.getId());
     }
 
-    private Map<String,String>getMap(TerminalModel terminalModel) throws IllegalAccessException {
+    private Map<String, String> getMap(TerminalModel terminalModel) {
         Map<String, String> map = new HashMap<>();
         for (Field field : terminalModel.getClass().getDeclaredFields()) {
             takeMap(terminalModel, map, field);
@@ -80,25 +75,28 @@ public class TerminalModelController {
         return map;
     }
 
-    private static void takeMap(TerminalModel terminalModel, Map<String, String> map, Field field) throws IllegalAccessException {
+    @SneakyThrows
+    private static void takeMap(TerminalModel terminalModel, Map<String, String> map, Field field) {
         field.setAccessible(true);
         String fieldName = field.getName();
-        if(field.getType().getName().equals(String.class.getName())){
+        if (field.getType().getName().equals(String.class.getName())) {
             String fieldValue = (String) field.get(terminalModel);
             map.put(fieldName, fieldValue);
-        }else if(field.getType().getName().equals(Boolean.class.getName())){
+        } else if (field.getType().getName().equals(Boolean.class.getName())) {
             map.put(fieldName, String.valueOf(field.get(terminalModel)));
-        }else if(field.getType().getName().equals(Long.class.getName())){
-            map.put(fieldName,String.valueOf(field.get(terminalModel)));
-        }else if(field.getType().isPrimitive()){
-            switch (field.getType().getSimpleName()){
-                case "int"->map.put(fieldName,String.valueOf(field.getInt(terminalModel)));
-                case "short"->map.put(fieldName,String.valueOf(field.getShort(terminalModel)));
-                case "boolean"->map.put(fieldName,String.valueOf(field.getBoolean(terminalModel)));
-                case "long"->map.put(fieldName,String.valueOf(field.getLong(terminalModel)));
-                case "byte"->map.put(fieldName,String.valueOf(field.getByte(terminalModel)));
-                case "char"->map.put(fieldName,String.valueOf(field.getChar(terminalModel)));
-                case "double"->map.put(fieldName,String.valueOf(field.getDouble(terminalModel)));
+        } else if (field.getType().getName().equals(Long.class.getName())) {
+            map.put(fieldName, String.valueOf(field.get(terminalModel)));
+        } else if (field.getType().getName().equals(Date.class.getName())) {
+            map.put(fieldName, String.valueOf(field.get(terminalModel)));
+        } else if (field.getType().isPrimitive()) {
+            switch (field.getType().getSimpleName()) {
+                case "int" -> map.put(fieldName, String.valueOf(field.getInt(terminalModel)));
+                case "short" -> map.put(fieldName, String.valueOf(field.getShort(terminalModel)));
+                case "boolean" -> map.put(fieldName, String.valueOf(field.getBoolean(terminalModel)));
+                case "long" -> map.put(fieldName, String.valueOf(field.getLong(terminalModel)));
+                case "byte" -> map.put(fieldName, String.valueOf(field.getByte(terminalModel)));
+                case "char" -> map.put(fieldName, String.valueOf(field.getChar(terminalModel)));
+                case "double" -> map.put(fieldName, String.valueOf(field.getDouble(terminalModel)));
             }
         }
     }
